--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ body
 }
 @media (max-aspect-ratio: 16/9) {
     #videoBG {
+      margin-left:-120vw;
         width:auto;
         height: 100%;
     }
