--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <h1 class = "sv" style="color:white";>Stunning Visuals</h1>
 <h2 class = "sv2" style="color:white";>Let VR Studios Tell Your Story</h2>
-<h2 href="https://www.w3schools.com/" class = "sv3";>Book Now</h2>
+<h2 class = "sv3";><a href = "book.html">Book Now</a></h2>
 
-<img href="https://www.w3schools.com/" class="vr" src="logo.png">
+<img class="vr" src="logo.png">
 
 
 
@@ -39,6 +39,11 @@ body
    height: 100%;
    overflow-y: hidden;
 }
+
+
+
+
+
 
 .sv{
   position: absolute;
