--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <h1 class = "sv" style="color:white";>Stunning Visuals</h1>
 <h2 class = "sv2" style="color:white";>Let VR Studios Tell Your Story</h2>
-<h2 class = "sv3";><a href = "book.html">Book Now</a></h2>
+<h2 class = "sv3";><a href = "book.html"><u>Book Now</u></a></h2>
 
 <img class="vr" src="logo.png">
 
@@ -20,6 +20,11 @@
 </body>
 
 <style>
+
+  a, a:hover, a:focus, a:active {
+      text-decoration: none;
+      color: inherit;
+ }
 
 
     html:
