--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <h1 class = "sv" style="color:white";>Stunning Visuals</h1>
 <h2 class = "sv2" style="color:white";>Let VR Studios Tell Your Story</h2>
-<h2 class = "sv3";><a href = "book.html"><u>Book Now</u></a></h2>
+<h2 class = "sv3";><a href = "https://www.instagram.com/visuallyrepresented/">View Work</a></h2>
+<h2 class = "sv4";><a href = "book.html">Book Now</a></h2>
 
 <img class="vr" src="logo.png">
 
@@ -72,10 +73,20 @@ body
   margin-left:65vw;
   position: absolute;
   font-size: 3vw;
-  margin-top:23.2vw;
+  margin-top:23.5vw;
   color: white;
 
 }
+
+.sv4{
+  margin-left:65.7vw;
+  position: absolute;
+  font-size: 3vw;
+  margin-top:28vw;
+  color: white;
+
+}
+
 
 .vr {
   position: absolute;
@@ -108,6 +119,7 @@ body
 
     .vr {
       width:70vw;
+      margin-top:-5vw;
       margin-left:15vw;
     }
 
@@ -122,10 +134,18 @@ body
 
     .sv3{
       position: absolute;
-      margin-left:27vw;
+      margin-left:26vw;
       font-size: 10vw;
       margin-top:120vw;
-      font
+      color: white;
+
+    }
+
+    .sv4{
+      position: absolute;
+      margin-left:27.5vw;
+      font-size: 10vw;
+      margin-top:140vw;
       color: white;
 
     }
