--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <source src="bgvideo3.mp4" type="video/mp4">
 </video>
 
-<h1 class = "sv" style="color:white";>Stunning Visuals</h1>
+<h1 class = "sv" style="color:#fae9cd";>Stunning Visuals</h1>
 <h2 class = "sv2" style="color:white";>Let VR Studios Tell Your Story</h2>
 <h2 class = "sv3";><a href = "https://www.instagram.com/visuallyrepresented/">View Work</a></h2>
 <h2 class = "sv4";><a href = "book.html">Book Now</a></h2>
