--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </video>
 
 <h1 class = "sv" style="color:#fae9cd";>Stunning Visuals</h1>
-<h2 class = "sv2" style="color:white";>Let VR Studios Tell Your Story</h2>
-<h2 class = "sv3";><a href = "https://www.instagram.com/visuallyrepresented/">View Work</a></h2>
-<h2 class = "sv4";><a href = "book.html">Book Now</a></h2>
+<h2 class = "sv2" style="color:#fae9cd";>Let VR Studios Tell Your Story</h2>
+<h2 class = "sv3" style="color:#fae9cd";><a href = "https://www.instagram.com/visuallyrepresented/">View Work</a></h2>
+<h2 class = "sv4"; style="color:#fae9cd"><a href = "book.html">Book Now</a></h2>
 
 <img class="vr" src="logo.png">
 
