--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <source src="bgvideo3.mp4" type="video/mp4">
 </video>
 
-<h1 class = "sv" style="color:#fae9cd";>Stunning Visuals</h1>
-<h2 class = "sv2" style="color:#fae9cd";>Let VR Studios Tell Your Story</h2>
-<h2 class = "sv3" style="color:#fae9cd";><a href = "https://www.instagram.com/visuallyrepresented/">View Work</a></h2>
-<h2 class = "sv4"; style="color:#fae9cd"><a href = "book.html">Book Now</a></h2>
+<h1 class = "sv" style="color:#fff4e2";>Stunning Visuals</h1>
+<h2 class = "sv2" style="color:#fff4e2";>Let VR Studios Tell Your Story</h2>
+<h2 class = "sv3" style="color:#fff4e2";><a href = "https://www.instagram.com/visuallyrepresented/">View Work</a></h2>
+<h2 class = "sv4"; style="color:#fff4e2"><a href = "book.html">Book Now</a></h2>
 
 <img class="vr" src="logo.png">
 
