--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2 class = "sv3" style="color:#fff4e2";><a href = "https://www.instagram.com/visuallyrepresented/">View Work</a></h2>
 <h2 class = "sv4"; style="color:#fff4e2"><a href = "book.html">Book Now</a></h2>
 
-<img class="vr" src="logo.png">
+<img class="vr" src="logovr.png">
 
 
 
